# filemaker-mcp

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  FM_ACCOUNT_SETUP.md  TOOL_REFERENCE.md
scripts/: _common.py  generate_ddl.py  release.sh
scripts/diagnostics/: ddl_context_builder.py  diagnose_data_fidelity.py  generate_ddl.py  smoke_test_cache.py  test_queries.py  test_report_patterns.py
src/filemaker_mcp/: __init__.py  auth.py  cli.py  config.py  credential_provider.py  dates.py  ddl.py  ddl_parser.py  field_classifier.py  server.py
src/filemaker_mcp/tools/: __init__.py  analytics.py  context.py  query.py  schema.py  tenant.py
tests/: __init__.py  conftest.py  test_analytics.py  test_core.py  test_field_classifier.py  test_report_dates.py
