[project]
name = "filemaker-mcp"
dynamic = ["version"]
description = "MCP server connecting AI assistants to FileMaker databases via OData"
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
authors = [{name = "Doug Hauenstein"}]

dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.28.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
filemaker-mcp = "filemaker_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/filemaker_mcp/__init__.py"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]
